<resources>
    <string name="app_name">學聯會繳費小幫手</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">切換鍵盤種類</string>

    <string name="facebook_app_id">----Facebook ID---</string>
    <string name="fb_login_protocol_scheme">---Protocol Key---</string>

    <string name="firebase_database_urls">--Firebase Url-</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="student_name">姓名</string>
    <string name="student_id">學號</string>
    <string name="student_institude">系所</string>
    <string name="student_gender">性別</string>
    <string name="submit">新增</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="other">其他</string>
    <string name="logout">登出</string>
    <string name="new_student">新增繳費名單</string>
    <string name="hide_fab">隱藏／顯示新增按鈕</string>

</resources>
