<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theblackcat102.unioninfo.AddStudent">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="@dimen/title_height"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:id="@+id/new_student_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_institude"
            android:textSize="@dimen/title_height"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:id="@+id/new_student_institude"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textSize="@dimen/title_height"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:id="@+id/new_student_id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_gender"
            android:textSize="@dimen/title_height"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/new_student_gender">
            <RadioButton
                android:id="@+id/male"
                android:textSize="@dimen/title_height"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/female"
                android:textSize="@dimen/title_height"
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/other"
                android:textSize="@dimen/title_height"
                android:text="@string/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_btn"
                android:layout_gravity="center"
                android:text="@string/submit"/>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
